--- a/about/index.html
+++ b/about/index.html
@@ -6,3 +6,6 @@ title: test page
 	<h1>Hi there, I'm Hank Quinlan!</h1>
 	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
+
+<img src="img/screenshot2.PNG" class="img-responsive" alt=""> </div>
+
