--- a/about/index.html
+++ b/about/index.html
@@ -7,5 +7,6 @@ title: test page
 	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
 
-<img src="img/screenshot2.PNG" class="img-responsive" alt=""> </div>
+![](images/Brodnik_Grant_Profile.jpg)
+<img src="images/Brodnik_Grant_Profile.jpg" class="img-responsive" alt=""> </div>
 
