--- a/about/index.html
+++ b/about/index.html
@@ -9,4 +9,4 @@ title: test page
 
 ![](images/Brodnik_Grant_Profile.jpg)
 <img src="images/Brodnik_Grant_Profile.jpg" class="img-responsive" alt=""> </div>
-
+<img src="https://octodex.github.com/images/jetpacktocat.png" height="300">
