--- a/about/index.html
+++ b/about/index.html
@@ -10,3 +10,4 @@ title: test page
 ![](images/Brodnik_Grant_Profile.jpg)
 <img src="images/Brodnik_Grant_Profile.jpg" class="img-responsive" alt=""> </div>
 <img src="https://octodex.github.com/images/jetpacktocat.png" height="300">
+<img src="https://gbrodnik.github.io/_photos/Brodnik_Grant_Profile.jpg" height="300">
