--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,6 @@ title: test page
 </div><!-- /.blurb -->
 
 ![](_photos/Brodnik_Grant_Profile.jpg)
-<img src="_photos/Brodnik_Grant_Profile.jpg" class="img-responsive" alt=""> </div>
+<img src="_photos/Brodnik_Grant_Profile.jpg" class="img-responsive" alt="">
 <img src="https://octodex.github.com/images/jetpacktocat.png" height="300">
 <img src="https://gbrodnik.github.io/_photos/Brodnik_Grant_Profile.jpg" height="300">
