--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,6 @@ title: test page
 
 ![](_photos/Brodnik_Grant_Profile.jpg)
 
-<img src="https://github.com/GBrodnik/<gbrodnik.github.io>/_photos/Brodnik_Grant_Profile.jpg">
+<img src="https://github.com/GBrodnik/gbrodnik.github.io/_photos/Brodnik_Grant_Profile.jpg">
 <img src="https://octodex.github.com/images/jetpacktocat.png" height="300">
 <img src="https://gbrodnik.github.io/_photos/Brodnik_Grant_Profile.jpg" height="300">
